auth-api/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: auth-service
spec:
  selector:
    app: auth-api
  ports:
    - port: 8080
      protocol: TCP
