auth-api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /auth
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /auth/swagger-ui
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
